Mais estudos de JavaScript
Imutabilidade com deep freeze, imutabilidade preservando o objeto original, inicio dos módulos

--- a/javascript/imutabilidade_deep_freezing/index.html
+++ b/javascript/imutabilidade_deep_freezing/index.html
@@ -6,6 +6,6 @@
     <title>Aulas de Javascript</title>
 </head>
 <body>
-    <script type="module" src="main.js"></script>
+    <script src="scripts.js"></script>
 </body>
 </html>
