--- a/javascript/imutabilidade_preservando_objeto_original/index.html
+++ b/javascript/imutabilidade_preservando_objeto_original/index.html
@@ -6,6 +6,6 @@
     <title>Aulas de Javascript</title>
 </head>
 <body>
-    <script type="module" src="main.js"></script>
+    <script src="scripts.js"></script>
 </body>
 </html>
